kustomize/nextcloud/overlays/prod/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  creationTimestamp: null
  name: nextcloud 
spec: {}
status: {}
