kustomize/nextcloud/overlays/prod/dashboard-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nextcloud-dashboard 
spec:
  ingressClassName: traefik
  rules:
  - host: nextcloud.tpi2.local
    http:
      paths:
      - backend:
          service:
            name: nextcloud 
            port:
              number: 9090
        path: /
        pathType: Prefix
status:
  loadBalancer: {}
